# dock-grpc

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
src/: README.md  async_greeter_client.py  async_greeter_server_with_graceful_shutdown.py
tests/: test_dummy.py
