# pyproject.toml

[project]
name = "dock-grpc"
version = "0.1.0"
description = "PoC compiling Python gRPC protos into docker containers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Alpha",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "grpcio",
    "protobuf",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/doodeck/dock-grpc"

[project.scripts]
dock-cli = "async_greeter_server_with_graceful_shutdown:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q"
testpaths = [
    "tests"
]
